// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/DataCell WithAttributes play-test 1`] = `
<div data-test-block="true">
  <td id="htmlId"
      class="_dataCell_1jzpx_1 _dataCell_standard_1jzpx_1 _dataCell_left_1jzpx_21  dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
    cake
  </td>
</div>
`;

exports[`Tester/Table/DataCell WithChildren play-test 1`] = `
<div data-test-block="true">
  <td class="_dataCell_1jzpx_1 _dataCell_standard_1jzpx_1 _dataCell_left_1jzpx_21">
    cellChildren
  </td>
</div>
`;

exports[`Tester/Table/DataCell WithRef play-test 1`] = `
<div data-test-block="true">
  <td class="_dataCell_1jzpx_1 _dataCell_standard_1jzpx_1 _dataCell_left_1jzpx_21"
      id="dummyIdForwardedFromRef"
  >
    cake
  </td>
</div>
`;

exports[`Tester/Table/DataCell WithThAndScope play-test 1`] = `
<div data-test-block="true">
  <th class="_dataCell_1jzpx_1 _dataCell_standard_1jzpx_1 _dataCell_left_1jzpx_21"
      scope="row"
  >
    cake
  </th>
</div>
`;
